k8s/prometheus-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: prometheus-ingress
 namespace: prometheus
 annotations:
   kubernetes.io/ingress.class: nginx
spec:
 rules:
 - host: prometheus.lreddy.xyz
   http:
     paths:
     - path:
       backend:
         serviceName: prometheus-server
         servicePort: 80
